--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,9 @@
-.idea
+*
+!.gitignore
+!wp-content/
+wp-content/*
+!wp-content/themes
+wp-content/themes/*
+!wp-content/themes/vieuxmoulin
+!wp-content/themes/vieuxmoulin/*
+!wp-content/themes/vieuxmoulin/**/*
