--- a/wp-content/themes/vieuxmoulin/public/.vite/manifest.json
+++ b/wp-content/themes/vieuxmoulin/public/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "wp-content/themes/vieuxmoulin/resources/css/styles.scss": {
-    "file": "assets/css-GP4f2BZP.css",
+    "file": "assets/css-dhPljL2_.css",
     "src": "wp-content/themes/vieuxmoulin/resources/css/styles.scss",
     "isEntry": true
   },
