add link to partenaire

--- a/wp-content/themes/vieuxmoulin/public/.vite/manifest.json
+++ b/wp-content/themes/vieuxmoulin/public/.vite/manifest.json
@@ -1,6 +1,6 @@
 {
   "wp-content/themes/vieuxmoulin/resources/css/styles.scss": {
-    "file": "assets/css-DXfUI89U.css",
+    "file": "assets/css-w3Ms4ATu.css",
     "src": "wp-content/themes/vieuxmoulin/resources/css/styles.scss",
     "isEntry": true
   },
